--------------------------------------------------------------------------

==========================================================================
CPSSkins 2.3.0 (development)
Released: 2004-08-xx

- Added a Portlet Box Templet.
  To be connected to CPSPortlets.


==========================================================================
CPSSkins 2.2 (final release)
Released: 2004-08-xx

- added Portugese translation of CPSSkins
  (Thanks to Mario Olimpio de Menezes <mario [at] curiango.ipen.br>

==========================================================================
CPSSkins 2.2-rc5 (release candidate)
Released: 2004-08-24

- RAM cache / ZEO:
  Changes performed on a theme are now spread through all ZEO instances.

  When an object is modified its cache expires with the modification date
  stored in the ZODB and the local RAM caches in each ZEO instance will be
  invalidated if the last cache update was performed before the modifications.

  This ought to work with ZEO servers located in different time zones
  since the time is the Universal Time (UTC).

- Bug fix:
  The path of an object instead of its ID is now used to identify an object
  in the RAM cache, since identical IDs within different folders are allowed
  to make it possible to edit themes directly through the ZMI. 

- UID checking:
  Objects with UIDs beginning with 'copy_of_' get a new ID.

- When copying a style from one theme to another, the default styles of
  the destination theme are now preserved.

- added a strip() to remove extra leading and trailing spaces in action urls
  which prevented them from being set as selected.

- fixed the creation of style through the contextual menu.

- CMF/Plone:
  Fixed an acquisition bug, if the portal site's name is the same
  as a given theme id under 'portal_themes'.

- Plone2:
  Removed an expensive call from the main_template.pt: 
  "allowedSortedContentTypes python:here.sortObjects(here