@@ -17,8 +17,15 @@ clean:
 	rm -f i18n/i18nchart.png
 
 i18n:
-	i18ndude sync --pot i18n/cpsskins.pot -s i18n/cpsskins-??.po
-	i18ndude sync --pot i18n/cpsskins-default.pot -s i18n/cpsskins-default-??.po
-	i18ndude sync --pot i18n/cpsskins-plone.pot -s i18n/cpsskins-plone-??.po
-
-	i18ndude chart -o i18n/i18nchart.png --pot i18n/cpsskins.pot i18n/cpsskins-??.po
+	i18ndude sync --pot i18n/cpsskins.pot -s \
+           i18n/cpsskins-[a-z][a-z].po \
+           i18n/cpsskins-[a-z][a-z]_[A-Z][A-Z].po
+	i18ndude sync --pot i18n/cpsskins-default.pot -s \
+           i18n/cpsskins-default-[a-z][a-z].po \
+           i18n/cpsskins-default-[a-z][a-z]_[A-Z][A-Z].po
+	i18ndude sync --pot i18n/cpsskins-plone.pot -s \
+           i18n/cpsskins-plone-[a-z][a-z].po \
+           i18n/cpsskins-plone-[a-z][a-z]_[A-Z][A-Z].po
+	i18ndude chart -o i18n/i18nchart.png --pot i18n/cpsskins.pot \
+           i18n/cpsskins-[a-z][a-z].po \
+           i18n/cpsskins-[a-z][a-z]_[A-Z][A-Z].po
